@@ -1,20 +1,19 @@
 package src.java.main.backtracking;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 /**
  * Given an array of distinct integers candidates and a target integer target, return a list of all unique combinations of candidates where the chosen numbers sum to target. You may return the combinations in any order.
- *
+ * <p>
  * The same number may be chosen from candidates an unlimited number of times. Two combinations are unique if the frequency of at least one of the chosen numbers is different.
- *
+ * <p>
  * The test cases are generated such that the number of unique combinations that sum up to target is less than 150 combinations for the given input.
- *
- *
- *
+ * <p>
+ * <p>
+ * <p>
  * Example 1:
- *
+ * <p>
  * Input: candidates = [2,3,6,7], target = 7
  * Output: [[2,2,3],[7]]
  * Explanation:
@@ -22,17 +21,17 @@ import java.util.List;
  * 7 is a candidate, and 7 = 7.
  * These are the only two combinations.
  * Example 2:
- *
+ * <p>
  * Input: candidates = [2,3,5], target = 8
  * Output: [[2,2,2,2],[2,3,3],[3,5]]
  * Example 3:
- *
+ * <p>
  * Input: candidates = [2], target = 1
  * Output: []
- *
- *
+ * <p>
+ * <p>
  * Constraints:
- *
+ * <p>
  * 1 <= candidates.length <= 30
  * 2 <= candidates[i] <= 40
  * All elements of candidates are distinct.
@@ -41,23 +40,25 @@ import java.util.List;
 public class CombinationSum {
     public List<List<Integer>> combinationSum(int[] candidates, int target) {
         List<List<Integer>> result = new ArrayList<>();
-        Arrays.sort(candidates);
-        combinationSumHelper(candidates, target, result, new ArrayList<Integer>(), 0);
+        List<Integer> current = new ArrayList<>();
+        combinationSum(candidates, target, result, 0, current);
         return result;
     }
 
-    private void combinationSumHelper(int[] candidates, int target, List<List<Integer>> result,
-                                      List<Integer> currentList, int index) {
+    private void combinationSum(int[] candidates, int target, List<List<Integer>> result, int index,
+                                List<Integer> current) {
+        if (target < 0 || index >= candidates.length)
+            return;
         if (target == 0) {
-            result.add(new ArrayList(currentList));
+            result.add(new ArrayList(current));
             return;
         }
-        for (int i = index; i < candidates.length; i++) {
-            if (candidates[i] <= target) {
-                currentList.add(candidates[i]);
-                combinationSumHelper(candidates, target - candidates[i], result, currentList, i);
-                currentList.remove(currentList.size() - 1);
-            }
-        }
+        //consider current index
+        current.add(candidates[index]);
+        combinationSum(candidates, target - candidates[index], result, index, current);
+        current.removeLast();
+
+        //skip current index
+        combinationSum(candidates, target, result, index + 1, current);
     }
 }
